@@ -1,1 +1,1 @@
-nx-X11/CHANGELOG
+nx-X11/changelog
