@@ -1,1 +1,1 @@
-nxcomp/CHANGELOG
+nxcomp/changelog
