@@ -1,1 +1,1 @@
-nxcompext/CHANGELOG
+nxcompext/changelog
