@@ -1,1 +1,1 @@
-nxcompshad/CHANGELOG
+nxcompshad/changelog
