@@ -1,1 +1,1 @@
-nx-X11/programs/Xserver/hw/nxagent/CHANGELOG
+nx-X11/programs/Xserver/hw/nxagent/changelog
