@@ -1,1 +1,1 @@
-nx-X11/programs/nxauth/CHANGELOG
+nx-X11/programs/nxauth/changelog
