@@ -1,4 +1,4 @@
-nxproxy/CHANGELOG
+nxproxy/changelog
 nxproxy/README
 nxproxy/README-IPAQ
 nxproxy/README-VALGRIND
