@@ -48,6 +48,7 @@ nx-libs (2:3.5.0-0~x2go2) UNRELEASED; urgency=low
     as they relate to a bug in debhelper (call of ldconfig although we did not
     touch any directory controlled by /etc/ld.so.conf, amongst others
     see BTS issue #205142).
+  * Make sure upstream changelog file names are in lower case.
 
  -- Mike Gabriel <mike.gabriel@das-netzwerkteam.de>  Wed, 28 Dec 2011 19:06:26 +0100
 
